Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/target/VoidMethod.out
VoidMethod.java:14:3: compiler.err.annotation.type.not.applicable
VoidMethod.java:18:3: compiler.err.annotation.type.not.applicable
2 errors
